Modify styling for timeline and rearrange elements and widths to prevent element overflows

--- a/public/style.css
+++ b/public/style.css
@@ -166,7 +166,7 @@ display: inline-block;
 }
 
 .col2 {
-width: 180px;
+width: 200px;
 display: inline-block;
 }
 
@@ -178,13 +178,13 @@ margin-bottom: 0px;
 }
 
 #footer {
-position: fixed;
+  position: relative;
 bottom: 0px;
-margin: 0px;
+margin: 0px auto;
 padding: 10px;
 text-align: right;
 border: 2px solid black;
-width: 97%;
+width: 1000px;
 background-color: #e2e0e0;
 border-radius: 4px;
 margin-bottom: 3px;
@@ -208,7 +208,8 @@ bottom: 0;
 .timeline {
 -webkit-appearance: none;
 width: 80%;
-height: 35px;
+height: 15px;
+border-radius: 7px;
 background: #d3d3d3;
 outline: none;
 -webkit-transition: .2s;
@@ -220,7 +221,8 @@ margin-left: 10%;
 -webkit-appearance: none;
 appearance: none;
 width: 15px;
-height: 35px;
+height: 15px;
+border-radius: 7px;
 background: #0974ff;
 cursor: pointer;
 }
@@ -231,7 +233,8 @@ display: none;
 
 .timeline::-moz-range-thumb {
 width: 15px;
-height: 35px;
+height: 15px;
+border-radius: 7px;
 background: #0974ff;
 cursor: pointer;
 }
